header part added

--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Flow</title>
+    <!-- ---inter font link------   -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+
+    <!-- Raleway font link--------- -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav>
-<h3 class="logo-and-button-primary">LOGO</h3>
-<button class="">Sign Up</button>
+            <h3 class="logo inter">LOGO</h3>
+            <button class="btn-primary raleway">Sign Up</button>
         </nav>
-        <div class="banner"></div>
+
+        <div class="banner">
+            <h2 class="banner-title raleway banner-and-title-used-secondary">Cool Dark UI Template for Webflow Agencies!</h2>
+            <button class="btn-primary raleway">Stay Focused</button>
+        </div>
     </header>
+
     <main></main>
     <footer></footer>
 </body>
+
 </html>
