--- a/index.html
+++ b/index.html
@@ -28,12 +28,49 @@
         </nav>
 
         <div class="banner">
-            <h2 class="banner-title raleway banner-and-title-used-secondary">Cool Dark UI Template for Webflow Agencies!</h2>
+            <h2 class="banner-title raleway banner-and-title-used-secondary">Cool Dark UI Template for Webflow Agencies!
+            </h2>
             <button class="btn-primary raleway">Stay Focused</button>
         </div>
     </header>
 
-    <main></main>
+    <main>
+        <section class="web-flow">
+            <div class="web-flow-text-container">
+                <h4 class="web-flow-title text raleway">See It in Action</h4>
+                <p class="web-flow-sub-title raleway">Explore the live preview and imagine your brand in this bold new
+                    look.</p>
+                <button class="btn-primary raleway">Launch Live Preview</button>
+            </div>
+
+            <img class="web-flow-image" src="./Assets/wc-mini.png" alt="">
+        </section>
+        <!-- -------productive-users section starts----------- -->
+        <section class="productive-users">
+            <h4 class="productive-users-title raleway">Joined Thousands of Productive Users</h4>
+
+            <div class="productive-users-stat">
+                <div>
+                    <h1 class="inter">50K</h1>
+                    <p class="inter">Active Users</p>
+                </div>
+
+                <div>
+                    <h1 class="inter">2M+</h1>
+                    <p class="inter">Focus Sessions</p>
+                </div>
+
+                <div>
+                    <h1 class="inter">95%</h1>
+                    <p class="inter">Satisfaction Rate</p>
+                </div>
+
+            </div>
+
+
+        </section>
+
+    </main>
     <footer></footer>
 </body>
 
