productive-users section added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         </section>
         <!-- -------productive-users section starts----------- -->
         <section class="productive-users">
-            <h4 class="productive-users-title raleway">Joined Thousands of Productive Users</h4>
+            <div class="productive-users-elements-container">
+                <h4 class="productive-users-title raleway">Joined Thousands of Productive Users</h4>
 
             <div class="productive-users-stat">
                 <div>
@@ -67,6 +68,7 @@
 
             </div>
 
+            </div>
 
         </section>
 
