Lets Get In Touch Section added

--- a/index.html
+++ b/index.html
@@ -50,26 +50,50 @@
             <div class="productive-users-elements-container">
                 <h4 class="productive-users-title raleway">Joined Thousands of Productive Users</h4>
 
-            <div class="productive-users-stat">
-                <div>
-                    <h1 class="inter">50K</h1>
-                    <p class="inter">Active Users</p>
-                </div>
+                <div class="productive-users-stat">
+                    <div>
+                        <h1 class="inter">50K</h1>
+                        <p class="inter">Active Users</p>
+                    </div>
 
-                <div>
-                    <h1 class="inter">2M+</h1>
-                    <p class="inter">Focus Sessions</p>
-                </div>
+                    <div>
+                        <h1 class="inter">2M+</h1>
+                        <p class="inter">Focus Sessions</p>
+                    </div>
 
-                <div>
-                    <h1 class="inter">95%</h1>
-                    <p class="inter">Satisfaction Rate</p>
+                    <div>
+                        <h1 class="inter">95%</h1>
+                        <p class="inter">Satisfaction Rate</p>
+                    </div>
+
                 </div>
 
             </div>
 
+        </section>
+
+        <!-- --------Lets Get In Touch Section start-----       -->
+        <section class="lets-get-in-touch">
+
+            <div class="touch-title-container">
+                <h1 class=" get-in-touch-title raleway">Let's Get In Touch</h1>
             </div>
 
+
+            <div class="form-container">
+                <form action="">
+                    <label class="inter" for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="example@gmail.com">
+
+                    <label class="inter" for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="full name">
+
+                    <label class="inter" for="Message"></label>
+                    <textarea class="inter" name="message" id="message" cols="35" rows="10"
+                        placeholder="write your message..."></textarea>
+                    <button class="btn-primary raleway">Get In Touch</button>
+                </form>
+            </div>
         </section>
 
     </main>
