--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <input type="text" name="name" id="name" placeholder="full name">
 
                     <label class="inter" for="Message"></label>
-                    <textarea class="inter" name="message" id="message" cols="35" rows="10"
+                    <textarea class="inter" name="message" id="message" cols="35" rows="15"
                         placeholder="write your message..."></textarea>
                     <button class="btn-primary raleway">Get In Touch</button>
                 </form>
@@ -97,7 +97,19 @@
         </section>
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <h3 class="footer-logo inter">LOGO</h3>
+            <p class="inter">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+
+            <ul>
+                <li><a class="inter" href="https://github.com/ProgrammingHero1/B12A01-landing-launchpad">Home</a></li>
+                <li><a class="inter" href="https://www.google.com/">About</a></li>
+                <li><a class="inter" href="https://unsplash.com/">How it Works</a></li>
+                <li><a class="inter" href="https://fontawesome.com/icons">Services</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
