focus better section added

--- a/index.html
+++ b/index.html
@@ -72,6 +72,41 @@
 
         </section>
 
+
+  <!-- -------users feedback section start-----      -->
+   <section class="users-feedback">
+    <h4 class="users-feedback">What our users say</h4>
+
+    <div class="feedback-cards-container">
+        <div>
+            <div class="img-container">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+                <img src="./Assets/icon-star.png" alt="">
+            </div>
+
+            <h5>Loved by Designers</h5>
+            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+
+            <div>
+                <p></p>
+                <p></p>
+            </div>
+        </div>
+    </div>
+
+   </section>
+
+        <!-- -------Ready to focus better section start----    -->
+        <section class="focus-better">
+            <h2 class="focus-better-title raleway">Ready to focus better</h2>
+            <p class="inter">This template instantly leveled up our presence.” – Studio Vertex</p>
+            <button class="btn-primary" >Ger Started Free</button> <br>
+            <img src="./Assets/wc-big.png" alt="">
+        </section>
+
+
         <!-- --------Lets Get In Touch Section start-----       -->
         <section class="lets-get-in-touch">
 
@@ -89,7 +124,7 @@
                     <input type="text" name="name" id="name" placeholder="full name">
 
                     <label class="inter" for="Message"></label>
-                    <textarea class="inter" name="message" id="message" cols="35" rows="15"
+                    <textarea class="inter" name="message" id="message" cols="20" rows="15"
                         placeholder="write your message..."></textarea>
                     <button class="btn-primary raleway">Get In Touch</button>
                 </form>
@@ -100,7 +135,8 @@
     <footer>
         <div class="footer-container">
             <h3 class="footer-logo inter">LOGO</h3>
-            <p class="inter">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+            <p class="inter">Ready to elevate your online presence? Contact us today to discuss your project and
+                discover how we can bring your vision to life.</p>
 
             <ul>
                 <li><a class="inter" href="https://github.com/ProgrammingHero1/B12A01-landing-launchpad">Home</a></li>
