users feedback section added

--- a/index.html
+++ b/index.html
@@ -73,36 +73,77 @@
         </section>
 
 
-  <!-- -------users feedback section start-----      -->
-   <section class="users-feedback">
-    <h4 class="users-feedback">What our users say</h4>
+        <!-- -------users feedback section start-----      -->
+        <section class="users-feedback">
+            <h4 class="users-feedback-title raleway">What our users say</h4>
 
-    <div class="feedback-cards-container">
-        <div>
-            <div class="img-container">
-                <img src="./Assets/icon-star.png" alt="">
-                <img src="./Assets/icon-star.png" alt="">
-                <img src="./Assets/icon-star.png" alt="">
-                <img src="./Assets/icon-star.png" alt="">
+            <div class="feedback-cards-container">
+                <div class="card">
+                    <div class="img-container">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                    </div>
+
+                    <h3 class="users-feedback-sub-title inter">Loved by Designers</h3>
+                    <p class="description inter">This template instantly leveled up our presence.” – Studio Vertex</p>
+
+                    <div class="review">
+                        <img src="./Assets/avatar.png" alt="">
+                        <div>
+                            <p class="inter">Reviewer name</p>
+                            <p class="inter">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                    </div>
+
+                    <h3 class="users-feedback-sub-title inter">Loved by Designers</h3>
+                    <p class="description inter">This template instantly leveled up our presence.” – Studio Vertex</p>
+
+                    <div class="review">
+                        <img src="./Assets/avatar.png" alt="">
+                        <div>
+                            <p class="inter">Reviewer name</p>
+                            <p class="inter">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                        <img src="./Assets/icon-star.png" alt="">
+                    </div>
+
+                    <h3 class="users-feedback-sub-title inter">Loved by Designers</h3>
+                    <p class="description inter">This template instantly leveled up our presence.” – Studio Vertex</p>
+
+                    <div class="review">
+                        <img src="./Assets/avatar.png" alt="">
+                        <div>
+                            <p class="inter">Reviewer name</p>
+                            <p class="inter">Date</p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <h5>Loved by Designers</h5>
-            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
-
-            <div>
-                <p></p>
-                <p></p>
-            </div>
-        </div>
-    </div>
-
-   </section>
+        </section>
 
         <!-- -------Ready to focus better section start----    -->
         <section class="focus-better">
             <h2 class="focus-better-title raleway">Ready to focus better</h2>
             <p class="inter">This template instantly leveled up our presence.” – Studio Vertex</p>
-            <button class="btn-primary" >Ger Started Free</button> <br>
+            <button class="btn-primary">Ger Started Free</button> <br>
             <img src="./Assets/wc-big.png" alt="">
         </section>
 
