--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <label class="inter" for="name">Name</label>
                     <input type="text" name="name" id="name" placeholder="full name">
 
-                    <label class="inter" for="Message"></label>
+                    <label class="inter" for="message">Message</label>
                     <textarea class="inter" name="message" id="message" cols="20" rows="15"
                         placeholder="write your message..."></textarea>
                     <button class="btn-primary raleway">Get In Touch</button>
