renew textarea height

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     <div class="review">
                         <img src="./Assets/avatar.png" alt="">
                         <div>
-                            <p class="inter">Reviewer name</p>
-                            <p class="inter">Date</p>
+                            <p class="inter reviewer-name">Reviewer name</p>
+                            <p class="inter date">Date</p>
                         </div>
                     </div>
                 </div>
@@ -111,8 +111,8 @@
                     <div class="review">
                         <img src="./Assets/avatar.png" alt="">
                         <div>
-                            <p class="inter">Reviewer name</p>
-                            <p class="inter">Date</p>
+                            <p class="inter reviewer-name">Reviewer name</p>
+                            <p class="inter date">Date</p>
                         </div>
                     </div>
                 </div>
@@ -130,8 +130,8 @@
                     <div class="review">
                         <img src="./Assets/avatar.png" alt="">
                         <div>
-                            <p class="inter">Reviewer name</p>
-                            <p class="inter">Date</p>
+                            <p class="inter reviewer-name">Reviewer name</p>
+                            <p class="inter date">Date</p>
                         </div>
                     </div>
                 </div>
